2015-01-09  Eli Zaretskii  <eliz@gnu.org>

	* emacs.c (usage_message): Fix the description of the -nl switch.
	(Bug#19542)

2015-01-08  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (buffer_posn_from_coords): Fix the value of the column
	returned for right-to-left screen lines.  (Before the change on
	2014-12-30, the incorrectly-computed X pixel coordinate concealed
	this bug.)

2015-01-05  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (move_it_to, try_cursor_movement): Don't use the window
	end information if the window_end_valid flag is unset.
	(try_window_id): If the call to display_line invalidated the
	window end information, give up the try_window_id optimization.
	(Bug#19511)

2015-01-04  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c (Fx_server_version, Fx_server_vendor): Doc fix.

	* xfns.c (Fx_server_version, Fx_server_vendor): Doc fix.

	* emacs.c (syms_of_emacs) <system-configuration>: Doc fix.
	(Bug#19502)

2014-12-30  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (pos_visible_p): Fix up the X coordinate for
	right-to-left screen lines.  (Bug#19473)

2014-12-28  Eli Zaretskii  <eliz@gnu.org>

	* w32proc.c (Fw32_get_codepage_charset): Doc fix.  (Bug#19458)

2014-12-28  Paul Eggert  <eggert@Penguin.CS.UCLA.EDU>

	Port memory-full checking to GnuTLS 3.3
	Instead of using gnutls_global_set_mem_functions, check every call
	to a GnuTLS function that might return an indication of memory
	exhaustion.  Suggested by Dmitry Antipov in:
	http://lists.gnu.org/archive/html/emacs-devel/2014-12/msg02056.html
	* gnutls.c (gnutls_global_set_mem_functions) [WINDOWSNT]: Remove.
	(init_gnutls_functions): Do not load gnutls_global_set_mem_functions.
	(fn_gnutls_global_set_mem_functions) [!WINDOWSNT]: Remove.
	All uses removed.
	(check_memory_full): New function.
	(emacs_gnutls_handshake, emacs_gnutls_handle_error)
	(gnutls_make_error, Fgnutls_boot): Use it.
	(emacs_gnutls_global_init): Avoid gnutls_global_set_mem_functions.

2014-12-25  Eli Zaretskii  <eliz@gnu.org>
